--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,899 +1,13 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
-
-@mixin on-tablet {
-  @media (min-width: 576px) {
-    @content;
-  }
-}
-
-@mixin on-desktop {
-  @media (min-width: 1024px) {
-    @content;
-  }
-}
-
-@mixin on-design {
-  @media (min-width: 1440) {
-    @content;
-  }
-}
-
-@mixin page-grid {
-  --columns: 2;
-
-  display: grid;
-  grid-template-columns: repeat(var(--columns), 1fr);
-  column-gap: 16px;
-
-  @include on-tablet {
-    --columns: 8;
-
-    column-gap: 24px;
-  }
-
-  @include on-desktop {
-    --columns: 8;
-  }
-}
-
-@mixin content-padding-inline() {
-  padding-inline: 16px;
-
-  @include on-tablet {
-    padding-inline: 44px;
-  }
-
-  @include on-desktop {
-    margin-inline: auto;
-    padding-inline: 44px;
-  }
-
-  @include on-design {
-    max-width: 1440px;
-    margin-inline: auto;
-    padding-inline: 124px;
-  }
-}
-
-@mixin hover($property, $toValue) {
-  transition: #{$property} 0.3s;
-  &:hover {
-    #{$property}: $toValue;
-  }
-}
-
-@mixin h1-style {
-  font-family: Inter, sans-serif;
-  font-size: 64px;
-  font-weight: normal;
-  font-style: normal;
-  line-height: 85%;
-  text-transform: uppercase;
-  letter-spacing: -0.05em;
-
-  @include on-tablet {
-    font-size: 80px;
-  }
-
-  @include on-desktop {
-    font-size: 144px;
-  }
-}
-
-@mixin h2-style {
-  font-family: Inter, sans-serif;
-  font-size: 48px;
-  font-weight: normal;
-  font-style: normal;
-  line-height: 85%;
-  text-transform: uppercase;
-  letter-spacing: -0.05em;
-
-  @include on-tablet {
-    font-size: 56px;
-  }
-
-  @include on-desktop {
-    font-size: 72px;
-  }
-}
-
-@mixin big-text {
-  font-family: Inter, sans-serif;
-  font-size: 96px;
-  font-weight: 400;
-  font-style: normal;
-  line-height: 85%;
-  text-transform: uppercase;
-  letter-spacing: -0.05em;
-}
-
-@mixin uppercase {
-  font-family: Inter, sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  font-style: normal;
-  line-height: 100%;
-  text-transform: uppercase;
-  letter-spacing: -0.02em;
-}
-
-@mixin main-text {
-  font-family: Inter, sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  font-style: normal;
-  line-height: 150%;
-  letter-spacing: -0.01em;
-}
-
-html,
-body {
-  scroll-behavior: smooth;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-.page {
-  color: #1c1a26;
-
-  @include main-text;
-
-  &__body {
-    margin: 0;
-    background-color: #eef7ff;
-  }
-  &__menu {
-    pointer-events: none;
-
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    transform: translateX(-100%);
-
-    opacity: 0;
-
-    transition: all 0.3s;
-
-    &:target {
-      pointer-events: all;
-      transform: translateX(0);
-      opacity: 1;
-    }
-  }
-}
-
-.container {
-  @include content-padding-inline;
-}
-
-.top-bar {
-  position: relative;
-
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
-  padding-block: 16px;
-
-  @include on-desktop {
-    padding-block: 28px;
-  }
-
-  &__logo {
-    cursor: pointer;
-    display: flex;
-    width: 136px;
-    height: 32px;
-
-    @include hover(transform, scale(1.2));
-  }
-
-  &__navs {
-    display: flex;
-    gap: 64px;
-  }
-  &__nav {
-    cursor: pointer;
-    display: none;
-    color: #1c1a26;
-    text-decoration: none;
-
-    @include main-text;
-
-    @include hover(transform, scale(1.2));
-
-    &:nth-last-child(2) {
-      @include on-desktop {
-        display: flex;
-        gap: 4px;
-        align-items: center;
-        justify-content: center;
-
-        color: #f9512e;
-
-        @include uppercase;
-      }
-    }
-
-    @include on-desktop {
-      display: inline-block;
-    }
-  }
-  &__icon {
-    width: 24px;
-    height: 24px;
-
-    background-image: url(../images/icons/icon-phone.svg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-  }
-}
-
-.header {
-  background-color: #eef7ff;
-  background-image: url('../images/cookie.png');
-  background-repeat: no-repeat;
-  background-position: center 70%;
-  background-size: 288px 290px;
-
-  @include on-tablet {
-    background-position: center 50%;
-  }
-
-  @include on-desktop {
-    background-position: center 60%;
-    background-size: 544px 546px;
-  }
-
-  &__content {
-    display: flex;
-    flex-direction: column;
-  }
-
-  &__bottom {
-    padding-bottom: 32px;
-
-    @include on-tablet {
-      padding-bottom: 76px;
-    }
-
-    @include on-desktop {
-      padding-bottom: 135px;
-    }
-
-    @include on-design {
-      padding-bottom: 112px;
-    }
-  }
-  &__subtitle {
-    @include main-text;
-
-    margin: 0;
-    margin-top: 32px;
-    color: #1c1a26;
-    text-align: center;
-
-    @include on-tablet {
-      width: 280px;
-      margin-top: 80px;
-      text-align: left;
-    }
-
-    @include on-desktop {
-      width: 260px;
-      margin-top: 135px;
-    }
-
-    @include on-design {
-      width: 280px;
-      margin-top: 144px;
-    }
-  }
-  &__title {
-    display: flex;
-    justify-content: center;
-
-    margin: 0;
-    margin-top: 32px;
-
-    color: #1c1a26;
-    text-align: center;
-
-    @include h1-style;
-
-    @include on-tablet {
-      margin-top: 146px;
-    }
-
-    @include on-desktop {
-      margin-top: 8px;
-
-      font-size: 136px;
-      font-weight: 400;
-      line-height: 85%;
-      text-align: center;
-      text-transform: uppercase;
-      letter-spacing: -0.05em;
-    }
-
-    @include on-design {
-      margin-top: 40px;
-    }
-  }
-  &__button {
-    cursor: pointer;
-
-    display: flex;
-    flex-direction: row;
-    gap: 4px;
-    align-items: center;
-    justify-content: center;
-
-    box-sizing: border-box;
-    height: 56px;
-    margin: 0;
-    margin-top: 290px;
-    border: 2px solid #f9512e;
-    border-radius: 32px;
-
-    transition: all 0.3s;
-
-    @at-root &:hover {
-      background-color: #f9512e;
-
-      .header__icon {
-        background-image: url(../images/icons/icon-cookie-white.svg);
-      }
-      .header__link {
-        color: #fff;
-      }
-    }
-
-    @at-root &:active {
-      border: solid 2px #b2341a;
-      background-color: #b2341a;
-
-      .header__icon {
-        background-image: url(../images/icons/icon-cookie-white.svg);
-      }
-      .header__link {
-        color: #fff;
-      }
-    }
-
-    @at-root &:disabled {
-      border: solid 2px #fba28f;
-
-      .header__icon {
-        background-image: url(../images/icons/icon-cookie-disabled.svg);
-      }
-      .header__link {
-        color: #fba28f;
-      }
-    }
-
-    @include on-tablet {
-      margin: 210px 177px 0;
-    }
-
-    @include on-desktop {
-      width: 260px;
-      margin: 0;
-      margin-top: 64px;
-    }
-
-    @include on-design {
-      width: 280px;
-    }
-  }
-  &__icon {
-    width: 24px;
-    height: 24px;
-
-    background-image: url(../images/icons/icon-cookie.svg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-  }
-
-  &__link {
-    color: #f9512e;
-    text-decoration: none;
-
-    @include uppercase;
-  }
-}
-
-.menu {
-  box-sizing: border-box;
-  height: 100vh;
-  background-color: #eef7ff;
-
-  &__top {
-    margin-bottom: 132px;
-  }
-
-  &__nav {
-    margin-bottom: 24px;
-  }
-
-  &__bottom {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-  }
-
-  &__content {
-    @include content-padding-inline;
-  }
-}
-
-.nav__link {
-  cursor: pointer;
-
-  position: relative;
-
-  display: block;
-
-  color: inherit;
-  text-decoration: none;
-
-  transition: transform 0.3s;
-
-  @include main-text;
-
-  @include hover(transform, scale(1.2));
-
-  &--contact {
-    padding-left: 28px;
-
-    color: #f9512e;
-
-    background-image: url(../images/icons/icon-phone.svg);
-    background-repeat: no-repeat;
-    background-position: left center;
-    background-size: 24px 24px;
-
-    // text-transform: uppercase;
-    @include uppercase;
-  }
-}
-
-.nav__list {
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
-
-  margin: 0;
-  padding: 0;
-
-  text-align: center;
-  list-style: none;
-}
-
-.icon {
-  cursor: pointer;
-
-  display: block;
-
-  width: 24px;
-  height: 24px;
-
-  background-size: cover;
-
-  @include hover(transform, scale(1.2));
-
-  &--close {
-    background-image: url(../images/icons/icon-close.svg);
-  }
-  &--contact {
-    padding: 0;
-
-    color: transparent;
-
-    background-image: url(../images/icons/icon-menu.svg);
-    background-repeat: no-repeat;
-    background-position: left center;
-    background-size: 24px 24px;
-
-    @include on-desktop {
-      display: none;
-    }
-  }
-}
-
-.main {
-  &__content {
-    display: grid;
-    row-gap: 72px;
-    padding-block: 72px;
-    color: #1c1a26;
-
-    @include on-tablet {
-      row-gap: 152px;
-      padding-block: 152px;
-    }
-
-    @include on-desktop {
-      row-gap: 178px;
-      padding-block: 178px;
-    }
-  }
-}
-
-.about-us {
-  display: flex;
-  flex-direction: column;
-
-  &__name {
-    @include h1-style;
-
-    margin: 0;
-    text-align: left;
-  }
-
-  &__subtitle {
-    @include main-text;
-
-    margin: 0;
-    margin-top: 24px;
-  }
-
-  &__cards {
-    @include page-grid;
-
-    row-gap: 56px;
-    margin-top: 56px;
-
-    @include on-tablet {
-      column-gap: 80px;
-      align-items: start;
-      margin-top: 80px;
-    }
-  }
-
-  &__photo {
-    width: 100%;
-
-    @include hover(transform, scale(1.05));
-  }
-
-  &__title {
-    margin: 16px 0 8px;
-
-    @include uppercase;
-
-    color: #7f8096;
-  }
-
-  &__info {
-    margin: 0;
-
-    @include main-text;
-
-    color: #1c1a26;
-  }
-
-  &__button {
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    margin-top: 16px;
-
-    @include hover(transform, translateX(10px));
-  }
-
-  &__icon {
-    width: 24px;
-    height: 24px;
-
-    background-image: url(../images/icons/icon-arrow.svg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-  }
-  &__link {
-    @include uppercase;
-
-    color: #f9512e;
-    text-decoration: none;
-  }
-
-  &__card {
-    grid-column: 1 / -1;
-
-    @include on-tablet {
-      grid-column: span 4;
-    }
-
-    @include on-desktop {
-      grid-column: span 3;
-      &:nth-child(3),
-      :nth-child(4) {
-        grid-column: 3 / span 3;
-      }
-    }
-  }
-}
-
-.blog {
-  background-image: url(../images/crumbs.png);
-  background-repeat: no-repeat;
-  background-position: center 69%;
-  background-size: 100%;
-
-  @include on-tablet {
-    background-position: 50% 58%;
-    background-size: 80%;
-  }
-
-  @include on-desktop {
-    background-position: 70% 5%;
-    background-size: 65%;
-  }
-
-  &__description {
-    @include on-tablet {
-      display: flex;
-      justify-content: center;
-    }
-  }
-
-  &__name {
-    @include h2-style;
-
-    margin: 0;
-
-    // margin-top: 72px;
-    text-align: left;
-
-    @include on-tablet {
-      width: 50%;
-      margin: 0;
-    }
-  }
-
-  &__info {
-    @include main-text;
-
-    margin: 32px 0 16px;
-    color: #1c1a26;
-
-    @include on-tablet {
-      width: 50%;
-      margin: 0;
-    }
-  }
-
-  &__count {
-    @include big-text;
-
-    margin: 0;
-    color: #1c1a26;
-  }
-  &__subtitle {
-    @include main-text;
-
-    margin: 0;
-    color: #7f8096;
-  }
-
-  &__cards {
-    margin-bottom: 72px;
-
-    @include page-grid;
-
-    @include on-tablet {
-      row-gap: 80px;
-      margin-top: 72px;
-      margin-bottom: 152px;
-    }
-
-    @include on-desktop {
-      margin-top: 144px;
-      margin-bottom: 349px;
-    }
-  }
-
-  &__card {
-    grid-column: 1 / -1;
-    margin-top: 48px;
-
-    @include on-tablet {
-      grid-column: span 4;
-      margin: 0;
-    }
-
-    @include on-desktop {
-      grid-column: span 2;
-    }
-  }
-}
-
-.footer {
-  $socials-icons: (
-    'facebook': url(../images/icons/icon-facebook.svg),
-    'instagram': url(../images/icons/icon-instagram.svg),
-    'twitter': url(../images/icons/icon-twitter.svg),
-  );
-  $socials-icons-hover: (
-    'facebook': url(../images/icons/icon-facebook-white.svg),
-    'instagram': url(../images/icons/icon-instagram-white.png),
-    'twitter': url(../images/icons/icon-twitter-white.svg),
-  );
-
-  background-color: #1c1a26;
-  &__logo {
-    cursor: pointer;
-    display: flex;
-    width: 168px;
-    height: 40px;
-
-    @include hover(transform, scale(1.2));
-  }
-
-  &__content {
-    padding: 56px 0;
-  }
-
-  &__list {
-    margin: 0;
-    margin-top: 40px;
-    padding: 0;
-
-    @include on-desktop {
-      &--call,
-      &--email {
-        grid-column: span 4;
-      }
-    }
-  }
-
-  &__link {
-    cursor: pointer;
-
-    display: inline-block;
-
-    color: #fff;
-    text-align: left;
-    text-decoration: none;
-
-    @include main-text;
-
-    &--name {
-      @include uppercase;
-
-      color: #7f8096;
-    }
-
-    @include hover(transform, scale(1.2));
-  }
-  &__item {
-    margin: 0;
-    margin-top: 16px;
-    list-style: none;
-
-    &:first-child {
-      @include on-desktop {
-        margin: 0;
-      }
-    }
-  }
-
-  &__title {
-    @include h2-style;
-
-    margin: 0;
-    margin-top: 64px;
-    color: #fff;
-
-    @include on-tablet {
-      margin: 0;
-    }
-
-    @include on-desktop {
-      br {
-        display: none;
-      }
-    }
-  }
-
-  &__notice {
-    @include main-text;
-
-    margin: 0;
-    margin-top: 40px;
-    color: #7f8096;
-
-    @include on-tablet {
-      margin: 0;
-    }
-  }
-
-  &__socials {
-    display: flex;
-    flex-direction: row;
-    margin-top: 40px;
-
-    @include on-tablet {
-      margin: 0;
-    }
-  }
-
-  &__social {
-    cursor: pointer;
-
-    width: 24px;
-    height: 24px;
-    margin-right: 32px;
-
-    background-position: center;
-    background-size: cover;
-
-    @include hover(transform, scale(1.2));
-  }
-
-  &__menus {
-    @include page-grid;
-  }
-
-  &__menu,
-  &__contact,
-  &__socials,
-  &__notice {
-    grid-column: 1 / -1;
-
-    @include on-tablet {
-      grid-column: span 4;
-    }
-  }
-
-  &__menu {
-    .footer__list:first-of-type {
-      @include on-tablet {
-        margin-top: 96px;
-      }
-
-      @include on-desktop {
-        margin-top: 61px;
-      }
-    }
-  }
-
-  &__info {
-    @include page-grid;
-
-    @include on-tablet {
-      margin-top: 48px;
-    }
-  }
-
-  &__contact-info {
-    @include on-desktop {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
-      gap: 24px;
-    }
-  }
-
-  @each $name, $url in $socials-icons {
-    &__social--#{$name} {
-      background-image: $url;
-    }
-  }
-
-  @each $name, $url in $socials-icons-hover {
-    &__social--#{$name} {
-      &:hover {
-        background-image: $url;
-      }
-    }
-  }
-}
+@import '../styles/blocks/page';
+@import '../styles/blocks/icon';
+@import '../styles/blocks/header';
+@import '../styles/blocks/menu';
+@import '../styles/blocks/nav';
+@import '../styles/blocks/top-bar';
+@import '../styles/blocks/main-section';
+@import '../styles/blocks/about-us';
+@import '../styles/blocks/blog';
+@import '../styles/blocks/footer';
