--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,8 +1,7 @@
 .header {
-  background-color: $back-color;
-  background-image: url(../../images/back__cookie.png);
+  background-image: url(../images/back__cookie.png);
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 584px 586px;
   background-position: center;
 
   &__content {
@@ -13,9 +12,19 @@
     height: 100vh;
   }
 
+  &__bottom-wrapper {
+    @include content-padding-inline;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-grow: 1;
+  }
+
   &__bottom {
     display: flex;
     flex-direction: column;
+    justify-content: center;
   }
 
   &__text {
@@ -29,15 +38,21 @@
     color: $accent-color;
     align-items: center;
     justify-content: center;
+    padding-bottom: 64px;
   }
 
   &__button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 4px;
+    width: 280px;
+    height: 56px;
     font-size: 16px;
     text-transform: uppercase;
     color: $accent-color;
     border-radius: 32px;
     border: 2px solid $accent-color;
-    background-color: none;
-    padding-top: 64px;
+    background-color: $back-color;
   }
 }
