--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,16 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import 'blocks/header';
+@import 'blocks/page';
+@import 'blocks/top-bar';
+@import 'blocks/icon';
+@import 'blocks/menu';
+@import 'blocks/nav';
+@import 'blocks/main';
+@import 'blocks/products';
+@import 'blocks/about-us';
+@import 'blocks/footer';
 
 body {
   background: $c-gray;
