--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -157,7 +157,16 @@
     font-size: 16px;
     line-height: 150%;
     letter-spacing: -1%;
+    display: inline-block;
+
+    transition: transform 0.3s ease;
+
+    &:hover {
+      transform: scale(1.2);
+    }
   }
+
+
 
   &__email-us {
     margin-top: 40px;
