--- a/src/styles/blocks/products.scss
+++ b/src/styles/blocks/products.scss
@@ -124,6 +124,14 @@
     line-height: 85%;
     letter-spacing: -0.05em;
     text-transform: uppercase;
+
+    @include on-tablet {
+      margin-left: 44px;
+    }
+
+    @include on-design {
+      margin-left: 128px;
+    }
   }
 
   &__sub-title {
@@ -136,6 +144,14 @@
     letter-spacing: -1%;
 
     margin-left: 16px;
+
+    @include on-tablet {
+      margin-left: 44px;
+    }
+
+    @include on-design {
+      margin-left: 128px;
+    }
   }
 
   &__image {
