--- a/src/styles/blocks/top-bar.scss
+++ b/src/styles/blocks/top-bar.scss
@@ -13,6 +13,11 @@
   &__logo {
     width: 136px;
     height: 32px;
+    transition: transform 0.3s ease;
+
+    &:hover {
+      transform: scale(1.2);
+    }
 
     @include on-desktop {
       margin-left: 16px;
