--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -42,6 +42,12 @@
     align-items: center;
     justify-content: center;
     gap: 4px;
+
+    transition: transform 0.3s ease;
+
+    &:hover {
+      transform: scale(1.2);
+    }
   }
 
   &__link--footer {
@@ -54,6 +60,12 @@
     line-height: 150%;
     letter-spacing: -1%;
     text-decoration: none;
+
+    transition: transform 0.3s ease;
+
+    &:hover {
+      transform: scale(1.2);
+    }
   }
 
   &__link--contact {
