--- a/src/styles/blocks/products.scss
+++ b/src/styles/blocks/products.scss
@@ -114,7 +114,7 @@
   }
 
   &__title {
-    margin-left: 16px;
+    padding-left: 16px;
 
     color: #f9512e;
     font-family: Inter, sans-serif;
@@ -126,11 +126,12 @@
     text-transform: uppercase;
 
     @include on-tablet {
-      margin-left: 44px;
+      padding-left: 44px;
     }
 
     @include on-design {
-      margin-left: 128px;
+      grid-column: span 3;
+      padding-left: 128px;
     }
   }
 
@@ -143,14 +144,14 @@
     line-height: 150%;
     letter-spacing: -1%;
 
-    margin-left: 16px;
+    padding-left: 16px;
 
     @include on-tablet {
-      margin-left: 44px;
+      padding-left: 44px;
     }
 
     @include on-design {
-      margin-left: 128px;
+      padding-left: 128px;
     }
   }
 
