add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,20 @@
 @import 'utils';
 @import 'fonts';
-@import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import 'page';
+@import 'header';
+@import 'top-bar';
+@import 'icon';
+@import 'nav';
+@import 'menu';
+@import 'leading';
+@import 'section-title';
+@import 'products';
+@import 'card';
+@import 'about-us';
+@import 'statistic';
+@import 'footer';
+@import 'menu-footer';
+@import 'contact-us';
+@import 'email-us';
+@import 'blog';
+@import 'copyright';
