--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,6 @@
 $c-gray: #eee;
+$main-background-color: #eef7ff;
+$main-text-color: #1c1a26;
+$tablet-min-width: 768px;
+$desktop-small-min-width: 1200px;
+$desktop-big-min-width: 1440px;
