--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,151 @@
+@mixin on-tablet {
+  @media (min-width: $tablet-min-width) {
+    @content;
+  }
+}
+
+@mixin on-desktop-small {
+  @media (min-width: $desktop-small-min-width) {
+    @content;
+  }
+}
+
+@mixin on-desktop-big {
+  @media (min-width: $desktop-big-min-width) {
+    @content;
+  }
+}
+
 @mixin hover($_property, $_toValue) {
   transition: #{$_property} 0.3s;
   &:hover {
     #{$_property}: $_toValue;
+  }
+}
+
+@mixin hover-card($_property, $_toValue) {
+  transition: #{$_property} 0.3s ease-out;
+  &:hover {
+    #{$_property}: $_toValue;
+  }
+}
+
+@mixin content-padding-inline() {
+  padding-inline: 16px;
+
+  @include on-tablet {
+    padding-inline: 44px;
+  }
+
+  @include on-desktop-small {
+    padding-inline: 44px;
+    margin-inline: auto;
+    max-width: 1200px;
+  }
+
+  @include on-desktop-big {
+    padding-inline: 124px;
+    margin-inline: auto;
+    max-width: 1440px;
+  }
+}
+
+.container {
+  @include content-padding-inline;
+}
+
+@mixin topbar-padding-inline() {
+  padding-inline: 16px;
+
+  @include on-tablet {
+    padding-inline: 16px;
+  }
+
+  @include on-desktop-small {
+    padding-inline: 32px;
+  }
+
+  @include on-desktop-big {
+    padding-inline: 32px;
+  }
+}
+
+.top-bar__container {
+  @include topbar-padding-inline;
+}
+
+@mixin page-grid {
+  --columns: 2;
+
+  display: grid;
+  grid-template-columns: repeat(var(--columns), 1fr);
+  column-gap: 16px;
+
+  @include on-tablet {
+    --columns: 8;
+
+    column-gap: 24px;
+  }
+
+  @include on-desktop-small {
+    --columns: 8;
+
+    column-gap: 24px;
+  }
+
+  @include on-desktop-big {
+    --columns: 8;
+
+    grid-template-columns: repeat(var(--columns), 1fr);
+    column-gap: 24px;
+    justify-content: center;
+  }
+}
+
+@mixin footer-list-style {
+  &__list {
+    display: flex;
+    flex-direction: column;
+    color: #fff;
+    margin: 0;
+    list-style: none;
+    gap: 16px;
+    padding: 0;
+  }
+
+  &__item {
+    &--title {
+      color: #7f8096;
+      font-weight: 500;
+      line-height: 100%;
+      letter-spacing: 2%;
+      text-transform: uppercase;
+    }
+  }
+
+  &__link {
+    text-decoration: none;
+    color: inherit;
+  }
+}
+
+@mixin underline {
+  &::after {
+    content: '';
+    background-color: #f9512e;
+    border: 1px;
+    display: block;
+    position: absolute;
+    width: 100%;
+    bottom: -8px;
+    height: 1px;
+
+    transition: transform 0.3s;
+    transform: scale(0);
+    transform-origin: center;
+  }
+
+  &:hover::after {
+    transform: scale(1);
   }
 }
