--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,4 @@
-@import 'utils';
-@import 'fonts';
-@import 'typography';
-
-body {
-  background: $c-gray;
-}
+@use 'desktop_1440';
+@use 'desktop_1200';
+@use 'tablet_768';
+@use 'mobile_320';
