--- a/src/styles/_tablet_768.scss
+++ b/src/styles/_tablet_768.scss
@@ -62,20 +62,28 @@
     opacity: 0;
   }
 
-  .contact_us {
-    position: relative;
-    z-index: 1;
-    background-image: url(../images/icon_menu.png);
-    background-size: 20px 8px;
-    background-repeat: no-repeat;
-    background-position: center;
-    height: 24px;
-    width: 24px;
-    text-indent: -9999px;
-    border: none;
-    padding: 0;
-    cursor: pointer;
-  }
+.contact_us {
+  position: relative;
+  z-index: 1;
+  background-image: url(../images/icon_menu.png);
+  background-size: 20px 8px;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 44px;
+  height: 44px;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+
+  text-indent: -9999px;
+  overflow: hidden;
+  white-space: nowrap;
+
+  display: block;
+
+  outline: none;
+
+}
 
   .baker_logo_modal {
     width: 127px;
@@ -203,7 +211,7 @@
     height: 700px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;   /* ← controla espaçamento vertical */                 /* ← espaçamento natural entre itens */
+    justify-content: space-between;
     text-align: left;
     box-sizing: border-box;
 
@@ -216,7 +224,7 @@
     line-height: 150%;
     letter-spacing: -1%;
     margin: 0;
-    align-self: flex-start;        /* ← ALINHA À ESQUERDA */
+    align-self: flex-start;
   }
 
   /* ===== TÍTULO: CENTRO ===== */
@@ -226,9 +234,9 @@
     font-size: 76px;
     line-height: 85%;
     letter-spacing: -5%;
-    text-transform: uppercase;             /* ← CENTRALIZA HORIZONTALMENTE */
+    text-transform: uppercase;
     text-align: start;
-    align-self: center;            /* ← reforça no flex */
+    align-self: center;
   }
 
   /* ===== BOTÃO: CENTRO ===== */
@@ -236,7 +244,7 @@
     width: 326px;
     height: 56px !important;
     font-size: 16px;
-    margin: 0 auto;                /* ← CENTRALIZA */
+    margin: 0 auto;
     background: url(../images/icon_button_learn.png) 80px center / 20px 20px no-repeat;
     border: 2px solid #f9512e;
     border-radius: 32px;
@@ -595,7 +603,7 @@
     width: 328px;
     display: flex;
     flex-direction: column;
-    gap: 20px;                    /* ← ESPAÇO ENTRE SEÇÕES */
+    gap: 20px;
     font-family: Inter, sans-serif;
     font-weight: 400;
     font-size: 56px;
@@ -610,7 +618,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 16px;                    /* ← ESPAÇO ENTRE "CALL" E "EMAIL" */
+    gap: 16px;
   }
 
   .call_us{
@@ -644,6 +652,6 @@
   .copyright {
     font-size: 15px;
     color: #7f8096;
-    margin-top: 15px;              /* ← SÓ 8px do email */
+    margin-top: 15px;
   }
 }
