--- a/src/styles/_mobile_320.scss
+++ b/src/styles/_mobile_320.scss
@@ -1,11 +1,13 @@
 @media (max-width: 320px) {
-  html,
+html,
   body {
     margin: 0;
     padding: 0;
     width: 100%;
-    overflow-x: hidden;
+    min-width: 320px;
+    overflow-x: hidden !important;
     box-sizing: border-box;
+    position: relative;
   }
 
   header {
@@ -35,6 +37,11 @@
   .navbar {
     height: 64px;
     padding: 0 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
   }
 
   .nav_baker {
@@ -52,6 +59,7 @@
     justify-content: end;
     flex-direction: row;
     align-items: center;
+
   }
   .products {
     display: none;
@@ -376,26 +384,26 @@
 
   .first_products_row {
     width: 288px;
-    height: 3900px;
+    height:3800px;
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    justify-content: flex;
     box-sizing: border-box;
+    justify-content:start;
   }
   .product_images-1 {
     width: 288px;
-    height: 492px;
+    height: 950px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    gap: 150px;
+    gap: 50px;
+    margin-top: 50px;
   }
 
   .product-1 {
-    width: 328px;
-    height: 424px;
-
+    width: 288px;
+    height: 492px;
     background-image: url(../images/product_1_desktop.png);
     background-size: contain;
     background-repeat: no-repeat;
@@ -403,13 +411,14 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    padding-top: 440px;
     box-sizing: border-box;
-    gap: 15px;
+    text-align: start ;
+    padding-top: 400px;
+
   }
   .product-2 {
-    width: 328px;
-    height: 424px;
+    width: 288px;
+    height: 492px;
     background-image: url(../images/product_2_desktop.png);
     background-size: contain;
     background-repeat: no-repeat;
@@ -417,24 +426,24 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    padding-top: 440px;
+    padding-top: 400px;
     box-sizing: border-box;
     gap: 15px;
   }
   .product_images-2 {
-    width: 680px;
-    height: 492px;
+    width: 288px;
+    height: 1000px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    gap: 150px;
-    transform: translateX(-300px);
-    margin-top: 620px;
+    gap: 50px;
+    margin-top: 60px;
+
   }
 
   .product-3 {
-    width: 328px;
-    height: 424px;
+    width: 288px;
+    height: 492px;
     background-image: url(../images/product_3_desktop.png);
     background-size: contain;
     background-repeat: no-repeat;
@@ -442,13 +451,13 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    padding-top: 440px;
+    padding-top: 400px;
     box-sizing: border-box;
   }
 
   .product-4 {
-    width: 328px;
-    height: 424px;
+    width: 288px;
+    height: 492px;
     background-image: url(../images/product_4_desktop.png);
     background-size: contain;
     background-repeat: no-repeat;
@@ -456,23 +465,23 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    padding-top: 440px;
+    padding-top: 400px;
     box-sizing: border-box;
   }
 
   .product_images-3 {
-    width: 680px;
-    height: 492px;
+    width: 288px;
+    height: 1000px;
     display: flex;
-    gap: 150px;
     flex-direction: column;
-    justify-content: space-between;
-    margin-top: 620px;
+    justify-content: space-around;
+    gap: 150px;
+    margin-top: 10px;
   }
 
   .product-5 {
-    width: 328px;
-    height: 424px;
+    width: 288px;
+    height: 492px;
     background-image: url(../images/product_5_desktop.png);
     background-repeat: no-repeat;
     background-size: 402px 530px;
@@ -480,13 +489,12 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    padding-top: 530px;
     box-sizing: border-box;
   }
 
   .product-6 {
-    width: 328px;
-    height: 424px;
+    width: 288px;
+    height: 492px;
     background-image: url(../images/product_6_desktop.png);
     background-size: 402px 530px;
     background-repeat: no-repeat;
@@ -494,7 +502,6 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    padding-top: 550px;
     box-sizing: border-box;
     gap: 5px;
   }
@@ -587,19 +594,19 @@
   }
 
   .footer {
-    width: 320px;
+    width: 100%;
     height: 914px;
 
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: center;
     justify-content: space-between;
     background-color: #1c1a26;
     margin-top: 450px;
   }
 
   .bakerlab {
-    height: 550px;
+    height: 300px;
     width: 280px;
     display: flex;
     flex-direction: column;
@@ -629,19 +636,21 @@
     font-size: 15px;
   }
 
-  .social_buttons {
-    position: absolute;
-    bottom: 0;
-    left: -7%;
-    width: 220px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 100px 0;
-  }
+.social_buttons {
+  position: relative;
+  top: 118%;
+  left: -15%;
+  width: 220px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  z-index: 1000;
+}
+
+
   .contact_us_footer {
     width: 320px;
-    height: 430px;
+    height: 300px;
     font-family: Inter, sans-serif;
     font-weight: 400;
     font-style: Regular;
@@ -649,19 +658,18 @@
     line-height: 85%;
     letter-spacing: -5%;
     text-transform: uppercase;
-    margin-bottom: 100px;
     color: white;
     display: flex;
     flex-direction: column;
-    margin-left: 5%;
-
+    justify-content: center;
+    margin-left: 20%;
     box-sizing: border-box;
   }
 
   .informations {
     width: 100%;
     flex-direction: column;
-    gap: 45px;
+    gap: 1px;
   }
 
   .call_us,
@@ -678,7 +686,7 @@
   }
 
   .copyright {
-    margin-top: 50px;
     font-size: 15px;
+    margin-top: 70px;
   }
 }
