--- a/src/styles/_mobile_320.scss
+++ b/src/styles/_mobile_320.scss
@@ -1,13 +1,18 @@
 @media (max-width: 320px) {
-html,
+* {
+  font-family: Inter, sans-serif;
+  font-style: normal;
+}
+
+  html,
   body {
     margin: 0;
     padding: 0;
     width: 100%;
-    min-width: 320px;
-    overflow-x: hidden !important;
-    box-sizing: border-box;
-    position: relative;
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    height: auto;
   }
 
   header {
@@ -59,7 +64,6 @@ html,
     justify-content: end;
     flex-direction: row;
     align-items: center;
-
   }
   .products {
     display: none;
@@ -247,7 +251,7 @@ html,
   }
 
   .creative_bakery {
-    width: 320px;
+    width: 310px;
     height: 116px;
 
     font-family: Inter, sans-serif;
@@ -384,12 +388,11 @@ html,
 
   .first_products_row {
     width: 288px;
-    height:3800px;
+    height: 3950px;
     display: flex;
     flex-direction: column;
     overflow: hidden;
     box-sizing: border-box;
-    justify-content:start;
   }
   .product_images-1 {
     width: 288px;
@@ -397,7 +400,7 @@ html,
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    gap: 50px;
+    gap: 75px;
     margin-top: 50px;
   }
 
@@ -412,9 +415,8 @@ html,
     flex-direction: column;
     justify-content: flex-start;
     box-sizing: border-box;
-    text-align: start ;
+    text-align: start;
     padding-top: 400px;
-
   }
   .product-2 {
     width: 288px;
@@ -436,9 +438,8 @@ html,
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    gap: 50px;
-    margin-top: 60px;
-
+    gap: 90px;
+    margin-top: 120px;
   }
 
   .product-3 {
@@ -475,8 +476,8 @@ html,
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    gap: 150px;
-    margin-top: 10px;
+    gap: 170px;
+    margin-top: 80px;
   }
 
   .product-5 {
@@ -567,7 +568,7 @@ html,
     justify-content: space-between;
     align-items: flex-start;
     text-align: start;
-    margin-top: 25%;
+    margin-top: 45%;
   }
 
   .stores,
@@ -595,14 +596,14 @@ html,
 
   .footer {
     width: 100%;
-    height: 914px;
+    height: 1000px;
 
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
     background-color: #1c1a26;
-    margin-top: 450px;
+    margin-top: 550px;
   }
 
   .bakerlab {
@@ -636,17 +637,16 @@ html,
     font-size: 15px;
   }
 
-.social_buttons {
-  position: relative;
-  top: 118%;
-  left: -15%;
-  width: 220px;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  z-index: 1000;
-}
-
+  .social_buttons {
+    position: relative;
+    top: 125%;
+    left: -15%;
+    width: 220px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    z-index: 1000;
+  }
 
   .contact_us_footer {
     width: 320px;
