--- a/src/styles/_desktop_1200.scss
+++ b/src/styles/_desktop_1200.scss
@@ -1,6 +1,13 @@
 @media (max-width: 1200px) {
+* {
+  font-family: Inter, sans-serif;
+  font-style: normal;
+}
+
+
   body {
     width: 100%;
+    align-items: center;
   }
 
   .mobile-modal {
@@ -10,16 +17,22 @@
   header {
     width: 100%;
     height: 700px;
-    margin:auto;
+    margin: auto;
     box-sizing: border-box;
-    background: url(../images/cookie_background.png) 54% 10% / 544px 546px no-repeat;
+    background: url(../images/cookie_background.png) 54% 10% / 544px 546px
+      no-repeat;
   }
 
   .navbar {
     height: 80px;
     padding: 0 10px;
+    align-items: center;
+    text-align: center;
   }
-
+.contact_nav{
+  text-align: start;
+  margin-top: 5px;
+}
   .nav_baker {
     width: 120px;
   }
@@ -46,7 +59,7 @@
   }
 
   .creative_bakery {
-    width: 1112px;
+    width: 1140px;
     height: 116px;
     font-size: 122px;
     line-height: 85%;
@@ -225,7 +238,8 @@
   }
 
   .first_products_row {
-max-width: 1112px; margin: 0 auto;
+    max-width: 1112px;
+    margin: 0 auto;
     height: 2293px;
     display: flex;
     flex-direction: column;
@@ -369,22 +383,26 @@ max-width: 1112px; margin: 0 auto;
   }
 
   .footer {
-   width: 100%; max-width: 1200px;
+    width: 100%;
     height: 525px;
     background-color: #1c1a26;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+font-weight: 400;
+line-height: 150%;
+letter-spacing: -1%;
+
   }
 
   .bakerlab {
-    width: 280px;
-    height: 350px;
+    height: 450px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 45px;
+    gap: 65px;
+    margin-top: 8%;
   }
 
   .bakerlab_logo {
@@ -405,10 +423,11 @@ max-width: 1112px; margin: 0 auto;
 
   .social_buttons {
     width: 220px;
+
   }
 
   .contact_us_footer {
-    width: 520px;
+    width: 600px;
     height: 350px;
     font-family: Inter, sans-serif;
     font-size: 72px;
@@ -422,6 +441,8 @@ max-width: 1112px; margin: 0 auto;
     flex-direction: column;
     gap: 45px;
     box-sizing: border-box;
+    margin-bottom: 3%;
+    margin-right: 8%;
   }
 
   .informations {
@@ -446,7 +467,7 @@ max-width: 1112px; margin: 0 auto;
   }
 
   .copyright {
-    margin-top: 25px;
+    margin-top: 60px;
     font-size: 15px;
   }
 }
