--- a/src/styles/_desktop_1440.scss
+++ b/src/styles/_desktop_1440.scss
@@ -2,6 +2,11 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: Inter, sans-serif;
+  font-style: normal;
+
+
+
 }
 
 body {
@@ -435,6 +440,7 @@ header {
   flex-direction: column;
   align-items: center;
   gap: 55px;
+  margin-top: 1%;
 }
 
 .bakerlab_logo {
@@ -557,5 +563,5 @@ header {
 .copyright {
   font-size: 16px;
   color: #7f8096;
-  margin-top: 30px;
+  margin-top: 50px;
 }
