--- a/src/styles/_tablet_768.scss
+++ b/src/styles/_tablet_768.scss
@@ -1,4 +1,9 @@
 @media (max-width: 768px) {
+* {
+  font-family: Inter, sans-serif;
+  font-style: normal;
+}
+
   html,
   body {
     margin: 0;
@@ -231,12 +236,12 @@
   .creative_bakery {
     width: 100%;
     max-width: 720px;
-    font-size: 76px;
+    font-size: 75px;
     line-height: 85%;
     letter-spacing: -5%;
     text-transform: uppercase;
     text-align: start;
-    align-self: center;
+    align-items: start;
   }
 
   /* ===== BOTÃO: CENTRO ===== */
@@ -260,24 +265,15 @@
 
   }
 
-  .title_product_main {
-    font-family: Inter, sans-serif;
-    font-weight: 400;
-    font-style: Regular;
-    font-size: 56px;
-    line-height: 85%;
-    letter-spacing: -5%;
-    text-transform: uppercase;
-    margin-right: 25%;
-  }
   .titles {
     width: 584px;
     height: 120px;
     text-align: start;
-    align-items: center;
+    align-items: start;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: -80px;
+
   }
   .title_product_cakes {
     font-family: Inter, sans-serif;
@@ -356,6 +352,7 @@
     margin: auto;
     display: flex;
     flex-direction: column;
+    height: 2016px;
   }
   .product-1 {
     width: 328px;
@@ -452,26 +449,36 @@
     box-sizing: border-box;
     gap: 5px;
   }
-  .subtitle_product {
-    font-family: Inter, sans-serif;
-    font-weight: 400;
-    font-style: Regular;
-    font-size: 16px;
-    line-height: 150%;
-    letter-spacing: -1%;
 
-    margin-left: 15px;
-  }
-  .title_product {
-    font-family: Inter, sans-serif;
-    font-weight: 500;
-    font-style: Medium;
-    font-size: 16px;
-    line-height: 100%;
-    letter-spacing: 2%;
-    text-transform: uppercase;
-    color: #7f8096;
-  }
+ .title_product_main {
+  font-family: Inter, sans-serif;
+  font-weight: 400;
+  font-size: 56px;
+  line-height: 85%;
+  letter-spacing: -5%;
+  text-transform: uppercase;
+  margin: 0 25% 4px 0;
+}
+
+.subtitle_product {
+  font-family: Inter, sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: -1%;
+  margin: 0;
+}
+
+.title_product {
+  font-family: Inter, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 100%;
+  letter-spacing: 2%;
+  text-transform: uppercase;
+  color: #7f8096;
+  margin: 2px 0 0 15px; // pequeno espaço acima, alinhado com subtitle
+}
   .information_about_us {
     width: 680px;
     height: 596px;
@@ -551,27 +558,26 @@
   }
 
   .footer {
-    width: 100vw;
+    width: 100%;
     height: 560px;
     max-width: 100vw;
     margin-left: calc(-50vw + 50%);
-    padding: 60px 40px;
     background: #1c1a26;
     display: flex;
     flex-direction: row;
     box-sizing: border-box;
     margin-top: 150px;
+    justify-content: space-around;
   }
 
   .bakerlab {
-    width: 280px;
+    width: 160px;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-image: url(../images/bakerlab_logo.png);
     background-repeat: no-repeat;
     background-position: 56% 0%;
-    margin-bottom: 100px;
   }
 
   .bakerlab_logo {
@@ -595,12 +601,12 @@
 
   .social_buttons {
     width: 220px;
-    margin-top: 60px;
+    margin-top: 20px;
 
   }
 
   .contact_us_footer {
-    width: 328px;
+    width: 150px;
     display: flex;
     flex-direction: column;
     gap: 20px;
