--- a/src/styles/_tablet_768.scss
+++ b/src/styles/_tablet_768.scss
@@ -15,7 +15,7 @@
     height: auto;
   }
 
-  header {
+  .header {
     width: 100%;
     height: 700px;
     background-repeat: no-repeat;
@@ -352,7 +352,8 @@
     margin: auto;
     display: flex;
     flex-direction: column;
-    height: 2016px;
+    justify-content: space-evenly;
+    height: 2316px;
   }
   .product-1 {
     width: 328px;
@@ -420,7 +421,6 @@
     margin: 0 auto;
     display: flex;
     justify-content: space-around;
-    gap: 10px;
   }
   .product-5 {
     width: 328px;
@@ -477,7 +477,7 @@
   letter-spacing: 2%;
   text-transform: uppercase;
   color: #7f8096;
-  margin: 2px 0 0 15px; // pequeno espaço acima, alinhado com subtitle
+  margin: 2px 0 0 15px;
 }
   .information_about_us {
     width: 680px;
