--- a/src/styles/_desktop_1440.scss
+++ b/src/styles/_desktop_1440.scss
@@ -53,7 +53,7 @@ body {
   display: none;
 }
 
-header {
+.header {
   width: 100%;
   height: 700px;
   background: url(../images/cookie_background.png) 50% 35% / 584px 586px
@@ -77,7 +77,10 @@ header {
   background: url(../images/bakerlab_desktop.png) center/contain no-repeat;
   width: 127px;
   height: 24px;
+  display: block;      /* faz o <a> se comportar como bloco */
+  cursor: pointer;     /* opcional, mas melhora UX */
 }
+
 
 .baker_lab:hover {
   transform: scale(1.1);
